# grocy-label-printer-escpos

./: .commitlintrc.json  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml  semantic-release.yml
src/grocy_label_printer_escpos/: __init__.py  server.py
tests/: test_server.py
